# trabalho_so

./: Cargo.toml
src/: main.rs
