[package]
name = "trabalho_so"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#iced = { path = "../..", features = ["debug"] }
iced = { version = "0.5", features = ["debug", "smol"] }
iced_native = { version = "0.6.1" }
iced_lazy = { version = "0.2.0" }
# time = { version = "0.3.17", features = ["local-offset"] }
