[package]
name = "trabalho_so"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.5", features = ["debug", "smol", "glow", "canvas"] }
iced_native = { version = "0.6" }
iced_lazy = { version = "0.2" }
plotters-iced = "0.4"
plotters = "0.3"
